submit buttons work now too for commenting

--- a/user_progress.html
+++ b/user_progress.html
@@ -102,7 +102,7 @@
                       <form class = "comment-update-form1" action="#">
 
                       <input type="text" class="form-control text-hour" placeholder="Enter your comment here" id="comment" required>
-                      <button type ="button" class ="btn btn-primary update-btn" id="comment_submit"> Submit </button>
+                      <button type ="submit" class ="btn btn-primary update-btn" id="button_submit"> Submit </button>
                     </form>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                   </div>
                       <form class = "comment-update-form2" action="#">
                       <input type="text" class="form-control text-hour" placeholder="Enter your comment here" id="comment2" required>
-                      <button type ="button" class ="btn btn-primary update-btn" id="comment_submit"> Submit </button>
+                      <button type ="submit" class ="btn btn-primary update-btn" id="button_submit2"> Submit </button>
                     </form>
                 </div>
             </div>
