re-added white background thumbnail

--- a/user_progress.html
+++ b/user_progress.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="middle">
-      <!-- <div class="img-thumbnail"> -->
+      <div class="img-thumbnail">
 
       <div class="user-progress-menu">
 
@@ -148,7 +148,7 @@
         </div>
      </div>
   </div>
-  <!-- </div> -->
+  </div>
     <div class="footer">
 
     <div class="copyright text-center">
