--- a/skills_list.html
+++ b/skills_list.html
@@ -11,6 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
+	<link rel="stylesheet" type="text/css" href="browse.css"/>
 	<script type="text/javascript">
 	function search()
 	{
@@ -95,8 +96,7 @@
 			        <h3>Laser Tag</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        	<a id="Unsubscribe" href="#" class="btn btn-primary" onclick="changeback()" role="button" style="display: none;">Unsubscribe</a>
-			        <a id="subscribe" href="#" class="btn btn-primary" onclick="changetext()" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a></p>
+			        	<button type="button" class="btn btn-info subscribe-btn">subscribe</button></p>
 			      </div>
 			    </div>
 			  </div>
@@ -107,7 +107,7 @@
 			        <h3>Cooking Entry</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -118,7 +118,7 @@
 			        <h3>Piano (mid-level)</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button></p>
 			      </div>
 			    </div>
 			  </div>
@@ -131,7 +131,7 @@
 			        <h3>Work Out Tips</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button></p>
 			      </div>
 			    </div>
 			  </div>
@@ -142,7 +142,7 @@
 			        <h3>Leather Working</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button></p>
 			      </div>
 			    </div>
 			  </div>
@@ -153,7 +153,7 @@
 			        <h3>Ice Skating</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -166,7 +166,7 @@
 			        <h3>Guitar Playing</h3>
 			        <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="group_play.html" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -216,12 +216,11 @@
 			    	<label for="name" style="font-family: sans-serif; font-weight: bold;">Description:</label>
 			    	<textarea class="form-control" rows="4"></textarea>
 			  	</div>
-			  	<input id="lefile" type="file" style="display:none">
+			  	<!-- <input id="lefile" type="file" style="display:none">
 				<div class="input-append" style="display:none;">
 					<input id="photoCover" type="text" class="form-control">
 					<a class="btn btn-primary" role="button" onclick="$('input[id=lefile]').click();">Browse</a>
 				</div>
-				<br>
 				<div class="form-group">
 					<label for="name" style="font-family: sans-serif; font-weight: bold;">Choose file</label>
 					<div class="input-group input-file" name="Fichier1">
@@ -230,7 +229,25 @@
         				<button class="btn btn-default btn-choose" type="button" onclick="$('input[id=lefile]').click();">Choose</button>
     					</span>
 					</div>
-				</div>
+				</div> -->
+				<div class="form-group">
+	              <label style="font-weight: bolder;">Upload Image:</label>
+	              <div class="input-group image-preview">
+	                <input type="text" class="form-control image-preview-filename" disabled="disabled"> <!-- don't give a name === doesn't send on POST/GET -->
+	                <span class="input-group-btn">
+	                    <!-- image-preview-clear button -->
+	                    <button type="button" class="btn btn-default image-preview-clear">
+	                        <span class="glyphicon glyphicon-remove"></span> Clear
+	                    </button>
+	                    <!-- image-preview-input -->
+	                    <div class="btn btn-default image-preview-input">
+	                        <span class="glyphicon glyphicon-folder-open"></span>
+	                        <span class="image-preview-input-title" >Browse</span>
+	                        <input type="file" accept="image/png, image/jpeg, image/gif" name="input-file-preview"/> <!-- rename it -->
+	                    </div>
+	                </span>
+	            </div><!-- /input-group image-preview [TO HERE]-->
+            </div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close
@@ -266,6 +283,7 @@
 </div>
 
 	</div>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 <!-- //Body -->
 
