--- a/skills_list.html
+++ b/skills_list.html
@@ -96,7 +96,7 @@
 			        <h3>Laser Tag</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        	<button type="button" class="btn btn-info subscribe-btn">subscribe</button></p>
+			        	<button type="button" class="btn btn-info subscribe-btn">Subscribe</button></p>
 			      </div>
 			    </div>
 			  </div>
@@ -107,7 +107,7 @@
 			        <h3>Cooking Entry</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -118,7 +118,7 @@
 			        <h3>Piano (mid-level)</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button></p>
+			        <button type="button" class="btn btn-info subscribe-btn">Subscribe</button></p>
 			      </div>
 			    </div>
 			  </div>
@@ -131,7 +131,7 @@
 			        <h3>Work Out Tips</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button></p>
+			        <button type="button" class="btn btn-info subscribe-btn">Subscribe</button></p>
 			      </div>
 			    </div>
 			  </div>
@@ -142,7 +142,7 @@
 			        <h3>Leather Working</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button></p>
+			        <button type="button" class="btn btn-info subscribe-btn">Subscribe</button></p>
 			      </div>
 			    </div>
 			  </div>
@@ -153,7 +153,7 @@
 			        <h3>Ice Skating</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -166,7 +166,7 @@
 			        <h3>Guitar Playing</h3>
 			        <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="group_play.html" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+			        <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -271,7 +271,7 @@
 			</div>
 			<div class="modal-body">
 				<h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; font-weight: bold; text-align: center;">
-					Congratulations! You subscribed the skill!
+					Congratulations! You subscribed to the skill!
 				</h4>
 			</div>
 			<div class="modal-footer">
@@ -283,7 +283,7 @@
 </div>
 
 	</div>
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="skill_list.js"></script>
 </body>
 <!-- //Body -->
 
