--- a/skills_list_after.html
+++ b/skills_list_after.html
@@ -28,10 +28,10 @@
     }
     function changetext(){
         document.getElementById("Unsubscribe").style.display="inline-block";
-        document.getElementById("subscribe").style.display="none";
+        document.getElementById("Subscribe").style.display="none";
     }
     function changeback(){
-        document.getElementById("subscribe").style.display="inline-block";
+        document.getElementById("Subscribe").style.display="inline-block";
         document.getElementById("Unsubscribe").style.display="none";
     }
     </script>
@@ -96,7 +96,7 @@
                     <h3>Dance</h3>
                     <p><a href="dancing_before.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -107,7 +107,7 @@
                     <h3>Laser Tag</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -118,7 +118,7 @@
                     <h3>Cooking Entry</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -131,7 +131,7 @@
                     <h3>Piano (mid-level)</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -142,7 +142,7 @@
                     <h3>Work Out Tips</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -153,7 +153,7 @@
                     <h3>Leather Working</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -166,7 +166,7 @@
                     <h3>Ice Skating</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -177,7 +177,7 @@
                     <h3>Guitar Playing</h3>
                     <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="group_play.html" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">subscribe</button> </p>
+                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -259,7 +259,7 @@
             </div>
             <div class="modal-body">
                 <h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; text-align: center;">
-                    Congratulations! You subscribed the skill!
+                    Congratulations! You subscribed to the skill!
                 </h4>
             </div>
             <div class="modal-footer">
@@ -272,7 +272,7 @@
 
     </div>
 </body>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="skill_list.js"></script>
 <!-- //Body -->
 
 </html>
