--- a/skills_list.html
+++ b/skills_list.html
@@ -252,7 +252,7 @@
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close
 				</button>
-				<a class="btn btn-primary" href="skills_list_after.html" role="button">Create Skill</a>
+				<a class="btn btn-primary" href="dancing_before.html" role="button">Create Skill</a>
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
