--- a/dancingpost.html
+++ b/dancingpost.html
@@ -36,7 +36,7 @@
     <div class="grid-container">
       <div class="header">
         <h1 class="title-layouts">
-        <span class="fa fa-object-group" aria-hidden="true"></span>Dance Strategies</h1>
+        <span class="fa fa-object-group" aria-hidden="true"></span>Dance Strategies <button type="button" class="btn btn-info subscribe-btn">Subscribe</button></h1>
         <div class="skill_desc">
           <h4><b>Description: </b>Check out these resources to help you learn new dance moves!</h4>
           <a class="btn btn-lg btn-info new-btn" href="dancing_after.html" role="button">Back to Strategy Page</a>
@@ -65,7 +65,7 @@
               <br/>
               Check out this <a href="https://www.wikihow.com/Moonwalk">article</a> to learn how to do the moonwalk. It helped me a ton! The video <a href="https://youtu.be/E_FzgtLVzbI">here</a> is pretty aweseome too.
             </p>
-            <button type="button" class="btn btn-success" href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Like</button>
+            <button type="button" class="btn btn-success like2-btn" href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Like</button>
             <p></p>
             <div class="thumbnail">
               <div class="row">
@@ -141,7 +141,7 @@
             <p></p>
             <p>
               <i class="glyphicon glyphicon-comment"></i> <a href="#">0 Comments</a>
-              | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">0 Likes</a>
+              | <i class="glyphicon glyphicon-thumbs-up"></i> <a class="likes2" href="#">0 Likes</a>
             </p>
           </div>
         </div>
