--- a/guitarpost.html
+++ b/guitarpost.html
@@ -36,7 +36,7 @@
     <div class="grid-container">
       <div class="header">
         <h1 class="title-layouts">
-        <span class="fa fa-object-group" aria-hidden="true"></span>Guitar Playing Strategies</h1>
+        <span class="fa fa-object-group" aria-hidden="true"></span>Guitar Playing Strategies <button type="button" class="btn btn-info subscribe-btn">Subscribe</button></h1>
         <div class="skill_desc">
           <h4><b>Description: </b>Check out these resources to help you learn new chords and songs!</h4>
           <a class="btn btn-lg btn-info new-btn" href="guitar.html" role="button">Back to Strategy Page</a>
@@ -67,7 +67,7 @@
             </p>
             <p>I uploaded 2 pictures of what the apps looks like when you open them up just to give you a sneak peak :)
             </p>
-            <button type="button" class="btn btn-success" href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Like</button>
+            <button type="button" class="btn btn-success like-btn" href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Like</button>
             <p></p>
             <div class="thumbnail">
               <div class="row">
@@ -221,7 +221,7 @@
             <p></p>
             <p>
               <i class="glyphicon glyphicon-comment"></i> <a href="#">3 Comments</a>
-              | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">4 Likes</a>
+              | <i class="glyphicon glyphicon-thumbs-up"></i> <a class="likes" href="#">4 Likes</a>
             </p>
           </div>
         </div>
