--- a/guitar.html
+++ b/guitar.html
@@ -181,7 +181,7 @@
             </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Create Strategy</button>
       </div>
     </div>
