changed close button to match button on skills list page

--- a/dancing_before.html
+++ b/dancing_before.html
@@ -97,7 +97,7 @@
             </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <a class="btn btn-primary" href="dancing_after.html" role="button">Create Strategy</a>
       </div>
     </div>
