Changed subscribe button to primary

--- a/skills_list_after.html
+++ b/skills_list_after.html
@@ -96,7 +96,7 @@
                     <h3>Dance</h3>
                     <p><a href="dancing_before.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
+                    <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -107,7 +107,7 @@
                     <h3>Laser Tag</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
+                    <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -118,7 +118,7 @@
                     <h3>Cooking Entry</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
+                    <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -131,7 +131,7 @@
                     <h3>Piano (mid-level)</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
+                    <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -142,7 +142,7 @@
                     <h3>Work Out Tips</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
+                    <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -153,7 +153,7 @@
                     <h3>Leather Working</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
+                    <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -166,7 +166,7 @@
                     <h3>Ice Skating</h3>
                     <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
+                    <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
@@ -177,7 +177,7 @@
                     <h3>Guitar Playing</h3>
                     <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
                         <a href="group_play.html" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <button type="button" class="btn btn-info subscribe-btn">Subscribe</button> </p>
+                    <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button> </p>
                   </div>
                 </div>
               </div>
