--- a/dancing_after.html
+++ b/dancing_after.html
@@ -34,7 +34,7 @@
     <div class="grid-container">
       <div class="header">
         <h1 class="title-layouts">
-        <span class="fa fa-object-group" aria-hidden="true"></span>Dance Strategies <button type="button" class="btn btn-info subscribe-btn">Subscribe</button></h1>
+        <span class="fa fa-object-group" aria-hidden="true"></span>Dance Strategies <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button></h1>
         <div class="skill_desc">
           <h4><b>Description: </b>Check out these resources to help you learn new dance moves!</h4>
           <button type="button" class="btn btn-lg btn-info new-btn" data-toggle="modal" data-target="#myModal">
