--- a/guitarpost.html
+++ b/guitarpost.html
@@ -36,7 +36,7 @@
     <div class="grid-container">
       <div class="header">
         <h1 class="title-layouts">
-        <span class="fa fa-object-group" aria-hidden="true"></span>Guitar Playing Strategies <button type="button" class="btn btn-info subscribe-btn">Subscribe</button></h1>
+        <span class="fa fa-object-group" aria-hidden="true"></span>Guitar Playing Strategies <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button></h1>
         <div class="skill_desc">
           <h4><b>Description: </b>Check out these resources to help you learn new chords and songs!</h4>
           <a class="btn btn-lg btn-info new-btn" href="guitar.html" role="button">Back to Strategy Page</a>
