--- a/dancingpost.html
+++ b/dancingpost.html
@@ -39,7 +39,7 @@
         <span class="fa fa-object-group" aria-hidden="true"></span>Dance Strategies <button type="button" class="btn btn-primary subscribe-btn">Subscribe</button></h1>
         <div class="skill_desc">
           <h4><b>Description: </b>Check out these resources to help you learn new dance moves!</h4>
-          <a class="btn btn-lg btn-info new-btn" href="dancing_after.html" role="button">Back to Strategy Page</a>
+          <a class="btn btn-lg btn-info new-btn" href="dancing_before.html" role="button">Back to Strategy Page</a>
         </div>
           <hr>
       </div>
@@ -76,7 +76,7 @@
         <hr>
               <div class="row">
     <div class='img-responsive'>
-            <div class='col-md-7'>
+            <div class='col-md-8'>
                 <a class="thumbnail fancybox" rel="ligthbox" href="https://youtu.be/E_FzgtLVzbI">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/E_FzgtLVzbI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     <div class='text-right'>
@@ -104,10 +104,10 @@
           </div>
           <div class="col-md-11">
 
-    <form>
+    <form class="comment-update-form2">
       <div class="form-group">
         <label for="comment">Your Comment</label>
-        <textarea name="comment" class="form-control" rows="3"></textarea>
+        <textarea name="comment" class="form-control" rows="3" id="comment2" required></textarea>
       </div>
       <button type="submit" class="btn btn-default">Send</button>
     </form>
@@ -123,7 +123,10 @@
           </div>
         </div>
         <hr>
+      <div class=container>
+          <div class="input_comment2"></div>
 
+      </div>
           </div>
 
       </div>
