--- a/guitarpost.html
+++ b/guitarpost.html
@@ -114,10 +114,10 @@
           </div>
           <div class="col-md-11">
 
-    <form>
+    <form class="comment-update-form1">
       <div class="form-group">
         <label for="comment">Your Comment</label>
-        <textarea name="comment" class="form-control" rows="3"></textarea>
+        <textarea name="comment" class="form-control" rows="3" id="comment" required></textarea>
       </div>
       <button type="submit" class="btn btn-default">Send</button>
     </form>
@@ -134,6 +134,7 @@
         </div>
         <hr>
         <div class=container>
+          <div class="input_comment"></div>
         <div class="row">
           <div class="col-md-1">
             <a href="#">
