groupplay -- all changes implemented

--- a/progress.html
+++ b/progress.html
@@ -80,7 +80,7 @@
 	        <div class="col-sm-6 col-md-4">
 	            <div class="thumbnail">
 	              <div class="caption">
-	                <h3 class="skill-title">Guitar Playing </h3>
+	                <h3 class="skill-title"><a href="guitar.html">Guitar Playing </a></h3>
 	                <h4 class="goal">Goal: <span id="goal1">Improve chord knowledge</span>
 	                	<div class = "goal-op">
 	                		<a href="#" data-target="#goal-setting-modal" data-toggle="modal"><i class="fa fa-cog" aria-hidden="true"></i> </a>
