--- a/group_play.html
+++ b/group_play.html
@@ -46,7 +46,7 @@
     <button id="searchy" onclick="search()""><img src="images/search.png" class="searchpic"></button>
     <span class="badge badge-primary badge-pill"></span>
   </li>
-  <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center">
+  <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center" id="groupplay">
     <a data-toggle="modal" data-target="#modal2"><img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;"></a>
     <div class="groupplayname">Group Play </div>
     <span class="badge badge-primary badge-pill">5</span>
@@ -69,7 +69,7 @@
   </li>
    <li class="list-group-item d-flex justify-content-between align-items-center groupsjoined">
    	    <img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;">
-    <div class="strummingpatterns">Strumming patterns</div>
+    <div class="strummingpatterns" id="strummingpatterns">Strumming patterns</div>
     <span class="badge badge-primary badge-pill">1</span>
   </li>
    <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -84,7 +84,7 @@
   </li>
    <li class="list-group-item d-flex justify-content-between align-items-center groupsjoined">
    	    <img src="images/info.png" class="infobutton" onmouseover="" style="cursor: pointer;">
-    <div class="banginit">Bangin it</div>
+    <div class="banginit" id="banginit">Bangin it</div>
     <span class="badge badge-primary badge-pill">5</span>
   </li>
    <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -135,32 +135,22 @@
   </div>
 </div>
 <div class="card chatitem">
-  <div class="card-body">
+  <div class="card-body" id="chat-2">
   </div>
 </div>
 <div class="card chatitem">
-  <div class="card-body">
+  <div class="card-body" id="chat-3">
   </div>
 </div>
 <div class="card chatitem">
-  <div class="card-body">
+  <div class="card-body" id="chat-4">
   </div>
 </div>
 <div class="card chatitem">
-  <div class="card-body">
+  <div class="card-body" id="chat-5">
   </div>
 </div>
-<div class="card chatitem">
-  <div class="card-body">
-  </div>
-</div>
-<div class="card chatitem">
-  <div class="card-body">
-  </div>
-</div>
-<div class="card chatitem">
-  <div class="card-body">
-  </div>
+
 </div>
 </div>
 </div>
@@ -188,7 +178,7 @@
         </button>
       </div>
       <div class="modal-body">
-        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Name: <input type="text" name="name" id="name"><br><br>
+        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Name: <input type="text" name="name" id="namesave"><br><br>
         Description: <input type="text" name="description"><br>
       </div>
       <div class="modal-footer">
