Made comment and like links unclickable

--- a/dancingpost.html
+++ b/dancingpost.html
@@ -143,8 +143,8 @@
           <div class="col-md-4">
             <p></p>
             <p>
-              <i class="glyphicon glyphicon-comment"></i> <a href="#">0 Comments</a>
-              | <i class="glyphicon glyphicon-thumbs-up"></i> <a class="likes2" href="#">0 Likes</a>
+              <i class="glyphicon glyphicon-comment"></i> <span class="comnts2">0 Comments</span>
+              | <i class="glyphicon glyphicon-thumbs-up"></i> <span class="likes2">0 Likes</span>
             </p>
           </div>
         </div>
