--- a/guitar.html
+++ b/guitar.html
@@ -82,8 +82,8 @@
           <div class="col-md-4">
             <p></p>
             <p>
-              <i class="glyphicon glyphicon-comment"></i> <a href="#">3 Comments</a>
-              | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">4 Likes</a>
+              <i class="glyphicon glyphicon-comment"></i> 3 Comments
+              | <i class="glyphicon glyphicon-thumbs-up"></i> 4 Likes
             </p>
           </div>
         </div>
@@ -123,8 +123,8 @@
           <div class="col-md-4">
             <p></p>
             <p>
-              <i class="glyphicon glyphicon-comment"></i> <a href="#">255 Comments</a>
-              | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">821 Likes</a>
+              <i class="glyphicon glyphicon-comment"></i> 255 Comments
+              | <i class="glyphicon glyphicon-thumbs-up"></i> 821 Likes
             </p>
           </div>
         </div>
