--- a/guitarpost.html
+++ b/guitarpost.html
@@ -221,8 +221,8 @@
           <div class="col-md-4">
             <p></p>
             <p>
-              <i class="glyphicon glyphicon-comment"></i> <a href="#">3 Comments</a>
-              | <i class="glyphicon glyphicon-thumbs-up"></i> <a class="likes" href="#">4 Likes</a>
+              <i class="glyphicon glyphicon-comment"></i> <span class="comnts">3 Comments</span>
+              | <i class="glyphicon glyphicon-thumbs-up"></i> <span class="likes">4 Likes</span>
             </p>
           </div>
         </div>
