made likes and comments link unclickable

--- a/userpage.html
+++ b/userpage.html
@@ -72,8 +72,8 @@
           <a class="btn btn-primary btn-sm read-btn" href="guitarpost.html" role="button">Read More</a>
         </p>
           <div class="post-info1">
-            <i class="glyphicon glyphicon-comment"></i> <a href="#">3 Comments</a>
-            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">4 Likes</a>
+            <i class="glyphicon glyphicon-comment"></i> 3 Comments
+            | <i class="glyphicon glyphicon-thumbs-up"></i> 4 Likes
           </div>
           <div class="post-info2">
             <i class="glyphicon glyphicon-user"></i> by <a href="#">John</a>
@@ -99,8 +99,8 @@
           <button type="button" class="btn btn-primary btn-sm read-btn" href="#">Read more</button>
         </p>
           <div class="post-info1">
-            <i class="glyphicon glyphicon-comment"></i> <a href="#">255 Comments</a>
-            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">821 Likes</a>
+            <i class="glyphicon glyphicon-comment"></i> 255 Comments
+            | <i class="glyphicon glyphicon-thumbs-up"></i> 821 Likes
           </div>
           <div class="post-info2">
             <i class="glyphicon glyphicon-user"></i> by <a href="#">Mike</a>
@@ -125,8 +125,8 @@
           <button type="button" class="btn btn-primary btn-sm read-btn" href="#">Read more</button>
         </p>
           <div class="post-info1">
-            <i class="glyphicon glyphicon-comment"></i> <a href="#">745 Comments</a>
-            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">2481 Likes</a>
+            <i class="glyphicon glyphicon-comment"></i> 745 Comments
+            | <i class="glyphicon glyphicon-thumbs-up"></i> 2481 Likes
           </div>
           <div class="post-info2">
             <i class="glyphicon glyphicon-user"></i> by <a href="#">Michael</a>
